--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_launcher_icons: ^0.9.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: "^0.8.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,4 +81,4 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "icon/lista.png"
+  image_path: "Icon/lista.png"
